# MC859

./: .gitignore  README.md  context.txt  pyproject.toml
MC859.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/processed/: characters.csv  semantic_embeddings_meta.json
data/reference/: kangxi_radicals.csv
entrega_parcial/: relatorio_parcial.tex
entrega_parcial/csvs/: degree_distribution.csv  weight_norm_distribution_bins.csv  weight_norm_summary.csv
entrega_parcial/python/: plot_degree_distribution.py  plot_weight_norm_distribution.py
reports/: unmapped_components_report.md
scripts/: build_characters_base.py  build_ids_selected.py  build_recursive_kangxi.py  build_semantic_embeddings.py  build_weighted_edges_from_embeddings.py  export_graphml.py
